--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pesan dari Indana untuk Richat</title>
+  <title>Pesan Lucu dari Indana untuk Richat</title>
   <style>
     body {
-      background-color: #121212;
-      color: #fff;
+      background-color: #f5e1f7;
+      color: #6a1b9a;
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
@@ -30,7 +30,7 @@
     }
 
     .btn {
-      background-color: #ff6f61;
+      background-color: #ff7f50;
       border: none;
       padding: 10px 20px;
       font-size: 1.2em;
@@ -42,7 +42,7 @@
     }
 
     .btn:hover {
-      background-color: #ff4f3b;
+      background-color: #ff6347;
       transform: scale(1.1);
     }
 
@@ -51,11 +51,11 @@
     }
 
     .sad-btn {
-      background-color: #ff4040;
+      background-color: #ff6347;
     }
 
     .sad-btn:hover {
-      background-color: #ff2e2e;
+      background-color: #ff4500;
     }
 
     .hidden {
@@ -88,11 +88,12 @@
       50% { transform: translateY(-30px); opacity: 0.5; }
       100% { transform: translateY(0); opacity: 1; }
     }
+
   </style>
 </head>
 <body>
 
-  <h1 id="title">Pesan dari Indana untuk Richat</h1>
+  <h1 id="title">Pesan Lucu dari Indana untuk Richat</h1>
 
   <div class="message" id="message1">
     <p>Yangg... boleh gak aku curhat bentar?</p>
@@ -106,7 +107,7 @@
   </div>
 
   <div class="message hidden" id="message3">
-    <p>Kalo aku bilang... kamu itu hadiah terbaik yang pernah aku dapet. Kamu percaya gak?</p>
+    <p>Kalo aku bilang... kamu itu hadiah terindah yang pernah aku dapet. Kamu percaya gak?</p>
     <button class="btn" id="yes2">Percaya kok 🥹</button>
     <button class="btn sad-btn" id="no2">Enggak 😬</button>
   </div>
@@ -118,8 +119,8 @@
   </div>
 
   <div class="message hidden" id="endMessage">
-    <p>Makasih ya, yangg… udah mau jadi rumah yang paling nyaman buat aku. <br>
-    Kamu bikin aku percaya... rasa bisa selucu dan seserius ini sekaligus.</p>
+    <p>Makasih ya, yangg... kamu tuh luar biasa dan selalu bikin aku bahagia! 😍<br>
+    Aku gak bisa berhenti senyum kalau mikirin kamu! 😘</p>
     <p>- Indana 🖤</p>
   </div>
 
@@ -141,7 +142,7 @@
         document.getElementById('no1').classList.add('hidden');
         let newBtn = document.createElement('button');
         newBtn.classList.add('btn');
-        newBtn.innerText = "Ya ampun, becanda 😅";
+        newBtn.innerText = "Haha, becanda ya? 😅";
         newBtn.addEventListener('click', function() {
           document.getElementById('message2').classList.add('hidden');
           document.getElementById('message3').classList.remove('hidden');
@@ -162,7 +163,7 @@
         document.getElementById('no2').classList.add('hidden');
         let newBtn = document.createElement('button');
         newBtn.classList.add('btn');
-        newBtn.innerText = "Yaudah deh percaya";
+        newBtn.innerText = "Yaudah deh, percaya 😅";
         newBtn.addEventListener('click', function() {
           document.getElementById('message3').classList.add('hidden');
           document.getElementById('message4').classList.remove('hidden');
