--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Comic Sans MS', cursive;
-      background: linear-gradient(to bottom right, #ffd6e0, #ffeef8);
+      background: #ffeef8;
       color: #b91c1c;
       text-align: center;
       padding: 40px;
@@ -74,12 +74,6 @@
         opacity: 0;
       }
     }
-
-    .cute-img {
-      width: 100px;
-      margin: 10px auto;
-      display: block;
-    }
   </style>
 </head>
 <body>
@@ -92,7 +86,6 @@
 
   <div class="container">
     <h2>Pesan Manis dari Indana buat sayang Richat 💌</h2>
-    <img src="https://i.ibb.co/ZVh01dm/cute-bear-love.png" alt="cute" class="cute-img">
 
     <div id="step1">
       <p>Sayang... boleh gak aku curhat bentar?</p>
@@ -120,7 +113,6 @@
     <div id="end" class="hidden">
       <p>Makasih ya, sayang! Kamu itu luar biasa dan selalu bikin aku bahagia! 😍<br><br>
       Aku gak bisa berhenti senyum kalau mikirin kamu! Aku bakal selalu jagain kamu, jangan khawatir 😘</p>
-      <img src="https://i.ibb.co/VxLF1Dd/cute-love-bear.png" alt="happy-bear" class="cute-img">
     </div>
   </div>
 
