--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pesan Manis dari Indana</title>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Comic Sans MS', cursive;
@@ -23,6 +24,13 @@
       position: relative;
       z-index: 2;
     }
+    .container > div {
+      animation: fadeInUp 0.6s ease;
+    }
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     .hidden { display: none; }
     .btn {
       background: #f472b6;
@@ -33,9 +41,15 @@
       margin: 10px;
       font-size: 16px;
       cursor: pointer;
+      animation: pulse 2s infinite;
       transition: transform 0.2s;
     }
     .btn:hover { background: #ec4899; }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
     .shake { animation: shake 0.4s; }
     @keyframes shake {
       0% { transform: translateX(0); }
@@ -44,7 +58,6 @@
       75% { transform: translateX(-5px); }
       100% { transform: translateX(0); }
     }
-
     .hearts {
       position: fixed;
       top: 0;
@@ -65,14 +78,16 @@
       opacity: 0.7;
     }
     @keyframes floatUp {
-      0% {
-        transform: translateY(100vh) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(-10vh) scale(0.5);
-        opacity: 0;
-      }
+      0% { transform: translateY(100vh) scale(1); opacity: 1; }
+      100% { transform: translateY(-10vh) scale(0.5); opacity: 0; }
+    }
+    @keyframes floatDown {
+      from { transform: translateY(-10vh); opacity: 1; }
+      to { transform: translateY(100vh); opacity: 0; }
+    }
+    #end p {
+      font-family: 'Indie Flower', cursive;
+      font-size: 20px;
     }
   </style>
 </head>
@@ -85,6 +100,7 @@
   <div class="hearts" id="hearts"></div>
 
   <div class="container">
+    <img src="https://i.pinimg.com/736x/e4/93/72/e4937278218b86c1d3cb81e68c4798e2.jpg" alt="Kucing Gemas" style="width: 120px; border-radius: 50%; box-shadow: 0 4px 8px rgba(0,0,0,0.2); margin-bottom: 20px;">
     <h2>Pesan Manis dari Indana buat sayang Richat 💌</h2>
 
     <div id="step1">
@@ -93,19 +109,19 @@
     </div>
 
     <div id="step2" class="hidden">
-      <p>Kamu pernah gak sih tiba-tiba ngerasa kangen banget... padahal baru aja ngobrol?</p>
+      <p>Kamu pernah gak sih tiba-tiba ngerasa kangen banget... padahal baru aja ngobrol? 😳</p>
       <button class="btn" onclick="response('step2','yes')">Pernah banget 🥹</button>
       <button class="btn" id="btn2no" onclick="ngambek('step2', 'btn2no', 'Haha, becanda ya?', 'Iya, tau deh kamu cuma bercanda 🥰', 'step3')">Ah lebay 😆</button>
     </div>
 
     <div id="step3" class="hidden">
-      <p>Kalo aku bilang... kamu itu hadiah terindah yang pernah aku dapet. Kamu percaya gak?</p>
+      <p>Kalo aku bilang... kamu itu hadiah terindah yang pernah aku dapet. Kamu percaya gak? 🎁</p>
       <button class="btn" onclick="response('step3','yes')">Percaya kok 🥹</button>
       <button class="btn" id="btn3no" onclick="ngambek('step3', 'btn3no', 'Ya ampun, becanda 😅', 'Iya deh, aku percaya kok! 😘', 'step4')">Enggak 😬</button>
     </div>
 
     <div id="step4" class="hidden">
-      <p>Jadi... boleh gak aku jagain kamu terus?</p>
+      <p>Jadi... boleh gak aku jagain kamu terus? 🥺👉👈</p>
       <button class="btn" onclick="nextStep('end')">Iya dong 🫶</button>
       <button class="btn" id="btn4no" onclick="hilang('step4', 'btn4no', 'Iya deh, aku jagain kamu juga 😅', 'Iya deh, aku gak mau pergi kok! 😘', 'end')">Enggak 😤</button>
     </div>
@@ -113,9 +129,18 @@
     <div id="end" class="hidden">
       <p>Makasih ya, sayang! Kamu itu luar biasa dan selalu bikin aku bahagia! 😍<br><br>
       Aku gak bisa berhenti senyum kalau mikirin kamu! Aku bakal selalu jagain kamu, jangan khawatir 😘</p>
+      <img src="https://media.istockphoto.com/id/1262603312/id/vektor/karakter-pelukan-pasangan-romantis-dengan-konsep-happy-valentines-day-terisolasi-di-latar.jpg?s=612x612&w=0&k=20&c=fXMnEueUyQArdi_aAniovIpODTAmegyyVysJDvSnv3Q=" alt="Peluk" style="width: 150px; margin-top: 20px;">
+
+      <p style="margin-top: 20px; font-style: italic;">PS: Kalo kamu lagi sedih, ingat ya... kamu punya aku! Dan aku punya pelukan jarak jauh spesial buat kamu 🤗💖</p>
+      <button class="btn" onclick="alert('Awww! Peluk balik dari Richat diterima 🥰💞')">Peluk balik 🤗</button>
     </div>
   </div>
 
+  <div style="position: fixed; bottom: 10px; width: 100%; text-align: center; font-size: 20px; color: #f43f5e; animation: pulse 2s infinite;">
+    I 💗 U more than kamu suka mie ayam malem-malem 🌙🍜
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
     function nextStep(id) {
       document.querySelectorAll('.container > div').forEach(div => div.classList.add('hidden'));
@@ -164,16 +189,33 @@
       }, 600);
     }
 
-    // Floating hearts animation
     const heartsContainer = document.getElementById('hearts');
+    const emojis = ['💖', '🌸', '🐱', '✨'];
     setInterval(() => {
-      const heart = document.createElement('div');
-      heart.classList.add('heart');
-      heart.style.left = Math.random() * 100 + 'vw';
-      heart.style.animationDuration = 3 + Math.random() * 3 + 's';
-      heartsContainer.appendChild(heart);
-      setTimeout(() => heart.remove(), 6000);
-    }, 500);
+      const el = document.createElement('span');
+      el.textContent = emojis[Math.floor(Math.random() * emojis.length)];
+      el.style.position = 'absolute';
+      el.style.left = Math.random() * 100 + 'vw';
+      el.style.top = '0';
+      el.style.fontSize = '24px';
+      el.style.animation = `floatDown ${3 + Math.random() * 3}s linear`;
+      heartsContainer.appendChild(el);
+      setTimeout(() => el.remove(), 6000);
+    }, 800);
+
+    const observer = new MutationObserver(() => {
+      if (!document.getElementById('end').classList.contains('hidden')) {
+        confetti({
+          particleCount: 200,
+          spread: 70,
+          origin: { y: 0.6 }
+        });
+        setTimeout(() => {
+          alert('💬 Indana: Aku sayang kamu banget loh! 💖');
+        }, 1000);
+      }
+    });
+    observer.observe(document.getElementById('end'), { attributes: true });
   </script>
 </body>
 </html>
