--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <div class="container">
     <img src="https://i.pinimg.com/736x/e4/93/72/e4937278218b86c1d3cb81e68c4798e2.jpg" alt="Kucing Gemas" style="width: 120px; border-radius: 50%; box-shadow: 0 4px 8px rgba(0,0,0,0.2); margin-bottom: 20px;">
-    <h2>Pesan Manis dari Indana buat sayang Richat 💌</h2>
+    <h2>Pesan Manis dari Indana buat sayangkuu Richat 💌</h2>
 
     <div id="step1">
       <p>Sayang... boleh gak aku curhat bentar?</p>
@@ -137,7 +137,7 @@
   </div>
 
   <div style="position: fixed; bottom: 10px; width: 100%; text-align: center; font-size: 20px; color: #f43f5e; animation: pulse 2s infinite;">
-    I 💗 U more than kamu suka mie ayam malem-malem 🌙🍜
+    I 💗 U more than kamu suka ninja SS 🥰💞
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
